--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
-  }, 
+  },
   "dependencies": {
-    "react": "16.0.0-alpha.6",
-    "react-native": "0.44.0",
     "babel-core": "^6.4.5",
     "babel-preset-react-native": "2.1.0",
+    "react": "16.0.0-alpha.6",
+    "react-native": "0.44.0",
+    "react-native-elements": "^0.16.0",
+    "react-native-vector-icons": "^4.2.0",
+    "react-navigation": "^1.0.0-beta.11",
     "react-redux": "5.0.6",
-    "redux": "3.7.2",
-    "react-navigation": "^1.0.0-beta.11"
+    "redux": "3.7.2"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
