--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
     "react-native-maps": "^0.16.3",
+    "react-native-svg": "^5.4.1",
     "react-native-vector-icons": "^4.2.0",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "5.0.6",
