--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "babel-core": "^6.4.5",
     "babel-preset-react-native": "2.1.0",
+    "moment": "^2.18.1",
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.0",
     "react-native-maps": "^0.16.3",
